--- a/static/style.css
+++ b/static/style.css
@@ -242,6 +242,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
 
 #reqs td#stillNeeded {
     color: red;
+    width: 15%;
 }
 
 #reqs td#notes {
