Changed the border style of req tables

--- a/static/style.css
+++ b/static/style.css
@@ -217,6 +217,8 @@ input[type=date]::-webkit-calendar-picker-indicator {
 
 #reqs {
     width: 100%;
+    border-collapse: separate;
+    border-spacing: 0px 3px;
 }
 
 #reqs th {
