--- a/static/style.css
+++ b/static/style.css
@@ -86,6 +86,16 @@ input[type='number']::-webkit-outer-spin-button {
 
 .topnav input {
     text-align: center;
+    border-style: outset;
+    background-color: #6969692f;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+}
+
+.topnav input:focus {
+    border: 2px solid black;
+    border-style: outset;
 }
 
 .topnav input#id {
@@ -254,7 +264,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
     padding-right: 0px;
 }
 
-#reqs td#notes {
+#reqs #notes {
     /* padding: top right bottom left */
     padding: 5px 20px 5px 10px;
     background-color: #81b6da75;
